
3.10 (pre)
 o Correct/enhance settings notebook navigation, ticket #188  (Steven)
 o Reopen settings notebook to last selected page unless overridden, ticket #188 (Steven)
 o Correct Compare Directories select count regression (Steven)
 o Correct Compare Directories file sizes regression (Steven)
 o Speed up Compare Directories filter redraw (Steven)

3.09
 o Check program strings entered in assoc, commands & settings for quoting,
 file extension, space before args and existence on entry. (Gregg)
 o Add TestFDate and TestCDate for date compare and sort functions (Gregg)
 o Use commaFMTULL for formating additional file, EA etc size information(Gregg)
 o Give LIBPATHSTRICT option for mailto & run FTP/HTTP (Gregg)
 o Add "mailto" option in new viewer (Gregg)
 o Make WPURLDEFAULTSETTINGS the fall back for ftp/httprun (Gregg)
 o Update CopyPresParams to copy all types of pres parameters (Gregg)
 o Add "Save as" menu item to internal viewer (Gregg)
 o Eliminate deletion of ext path if it was not valid on startup
 o Allow saving of a currently not valid ext path with warning (Gregg)
 o Internal editor now handles readonly files (Gregg)
 o Correct hex edit buffer sizing to avoid data loss (Steven)
 o Use CopyPresParams to fix presparam inconsistencies in menus  (Gregg)
 o Correct variable cast to fix hex code display problem (Gregg)
 o Correct variable cast to fix hex code display problem (Gregg)
 o Update includes to allow standalone usage (Steven)
 o Switch to wrc.exe default; support USE_RC from environment (Steven)
 o Avoid out of memory traps in Compare Directories (Steven)
 o Correct INI editor copy failures (Steven)
 o Use CloseProfile to avoid spurious system INI closes (Steven)

3.08
 o Cancel in walk directories dialog now directly closes dialog even if
   directory path text has changed (Gregg)
 o Fixed seek and scan crash caused by file names that exceed maxpath(Gregg)
 o Fixed INVALID_NAME error caused by FILEFIND buffer crossing a 64k boundry (Steven)