@@ -6,7 +6,7 @@
   Command resources
 
   Copyright (c) 1993-98 M. Kimes
-  Copyright (c) 2003, 2007 Steven H. Levine
+  Copyright (c) 2003, 2008 Steven H. Levine
 
   08 Feb 03 SHL Enable SYS_FRAME
   04 Nov 03 SHL Drop obsoletes
@@ -28,6 +28,7 @@
   30 Aug 07 SHL Add accelerator support to QuickList windows
   05 Sep 07 SHL Small change for OpenWatcom wrc compat
   26 Nov 07 GKY Added "Save as" to internal editor
+  12 Jan 08 SHL Rework Config menu
 
 ***********************************************************************/
 
@@ -242,15 +243,21 @@ MENU  MAIN_FRAME
     }
     MENUITEM "Toggle ~quicklists\tF8",IDM_USERLIST
     MENUITEM "Toggle ~bottom buttons\tCtrl + F8",IDM_MOREBUTTONS
-    MENUITEM "~Toggle drivebar\tCtrl + Shift + F8",IDM_DRIVEBAR
+    MENUITEM "Toggle dri~vebar\tCtrl + Shift + F8",IDM_DRIVEBAR
+    MENUITEM "Toggle ~drag&drop prompting",IDM_TOGGLEDRAGDIALOG		// 12 Jan 08 SHL
     MENUITEM "",                  -1,           MIS_SEPARATOR
-    MENUITEM "Edit ~associations...",IDM_EDITASSOC
-    MENUITEM "Edit ~commands...", IDM_EDITCOMMANDS
-    MENUITEM "Edit an archi~ver...",IDM_EDITANYARCHIVER
-    MENUITEM "",                  -1,           MIS_SEPARATOR
-    MENUITEM "~Font palette",     IDM_FONTPALETTE
-    MENUITEM "Color ~palette",    IDM_COLORPALETTE
-    MENUITEM "Hi-~res color palette",IDM_HICOLORPALETTE
+    SUBMENU "~Edit",							IDM_EDITCOMMANDS
+	 {
+	   MENUITEM "Edit ~associations...",IDM_EDITASSOC
+		MENUITEM "Edit ~commands...", IDM_EDITCOMMANDS
+		MENUITEM "Edit an archi~ver...",IDM_EDITANYARCHIVER
+	 }
+    SUBMENU "~Palette",							IDM_FONTPALETTE
+	 {
+	    MENUITEM "~Font palette",     IDM_FONTPALETTE
+	    MENUITEM "~Color palette",    IDM_COLORPALETTE
+	    MENUITEM "~Hi-res color palette",IDM_HICOLORPALETTE
+	 }
   }
   SUBMENU "~Windows",             IDM_WINDOWSMENU
   {
